# atlas

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  biome.json  nx.json  package.json  tsconfig.base.json
apps/api/: .env.example  package.json  project.json  tsconfig.json
apps/api/src/: main.ts
apps/web/: index.html  package.json  project.json  rsbuild.config.ts  tsconfig.json
apps/web/public/: world-countries.geojson
apps/web/src/: app.css  app.tsx  main.tsx  providers.tsx  theme.css  use-market-dashboard.ts
apps/worker/: package.json  project.json  tsconfig.json
apps/worker/src/: main.ts
docs/: 00-readme.md  01-vision.md  02-product.md  03-architecture.md  04-ports-and-adapters.md  05-langgraph-design.md  06-data-model.md  07-roadmap.md  08-risks.md  09-conventions.md
docs/adr/: 0000-template.md  0001-use-bun-as-runtime.md  0002-nx-monorepo-layout.md  0003-ports-and-adapters-architecture.md  0004-postgres-with-pgvector-as-single-store.md  0005-langgraph-behind-an-orchestration-port.md  0006-provider-agnostic-market-data-port.md
services/intelligence/: .env.example  README.md  project.json  pyproject.toml
services/intelligence/app/: __main__.py  main.py
services/intelligence/app/adapters/: embedding_stub.py  llm_stub.py  vector_store_stub.py  web_search_stub.py
services/intelligence/app/api/: graphs.py
services/intelligence/app/core/: config.py  errors.py  events.py
services/intelligence/app/graphs/: registry.py
services/intelligence/app/ports/: embedding.py  llm.py  vector_store.py  web_search.py
(+28 files in other folders)
