[project]
name = "atlas-intelligence"
version = "0.0.0"
description = "Atlas Python intelligence microservice (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
